--- a/cursos/espanol/programacion/6_funciones_ya_definidas.ipynb
+++ b/cursos/espanol/programacion/6_funciones_ya_definidas.ipynb
@@ -39,7 +39,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -91,7 +94,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -338,7 +344,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Escribir aqui la solucion"
+    "# Escribir aqui la solucion\n",
+    "\n"
    ]
   },
   {
