New units added (11-15)

--- a/cursos/espanol/programacion/A0_practica.ipynb
+++ b/cursos/espanol/programacion/A0_practica.ipynb
@@ -2146,6 +2146,266 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1dc0a5ee-66d5-41ee-a919-5a21d27a0329",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 34:\n",
+    "\n",
+    "Crear una funcion lista_intercalada(l1, l2) que reciba dos parametros de tipo lista y devuelva una nueva lista con los elementos de las dos listas intercalados. Crear una nueva lista y llenarla utilizando la funcion append(valor) que poseen los objetos de tipo lista\n",
+    "\n",
+    "Aclaraciones: \n",
+    "- l1 y l2 siempre tendran el mismo tamaño\n",
+    "\n",
+    "*Ejemplo de input y output:*\n",
+    "\n",
+    "*Input: l1=[\"a\",\"b\",\"c\"], l2=[\"x\",\"y\",\"z\"]*\n",
+    "\n",
+    "*Output: [\"a\",\"x\",\"b\",\"y\",\"c\",\"z\"]*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b67360b-f1d2-48bf-939a-e41c4207a761",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lista_intercalada(l1, l2):\n",
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c11f5e65-d66f-48a1-8c8f-b7732c23bdd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
+    "assert lista_intercalada([\"a\",\"b\",\"c\"],[\"x\",\"y\",\"z\"]) == [\"a\",\"x\",\"b\",\"y\",\"c\",\"z\"], \"Error en el test 1\"\n",
+    "assert lista_intercalada([0,0,0,0],[1,1,1,1]) == [0,1,0,1,0,1,0,1], \"Error en el test 2\"\n",
+    "assert lista_intercalada([],[]) == [], \"Error en el test 3\"\n",
+    "assert lista_intercalada([1,2,3],[3,2,1]) == [1,3,2,2,3,1], \"Error en el test 4\"\n",
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c24f64c7-76f4-4722-9173-af2952ce6042",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 34 {display-mode:\"form\"}\n",
+    "\n",
+    "def lista_intercalada(l1, l2):\n",
+    "    n = len(l1)\n",
+    "    l3 = []\n",
+    "    for i in range(n):\n",
+    "        l3.append(l1[i])\n",
+    "        l3.append(l2[i])\n",
+    "    return l3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55ff6f1f-8c82-4c84-9cd7-a18be0502afd",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 35:\n",
+    "\n",
+    "Crear una funcion concatenar_listas(l1, l2) que reciba dos parametros de tipo lista y devuelva una nueva lista con los elementos de l1 seguidos por los elementos de l2. Utilizar la funcion extend() que poseen los objetos de tipo list\n",
+    "\n",
+    "\n",
+    "*Ejemplo de input y output:*\n",
+    "\n",
+    "*Input: l1=[\"a\",\"b\",\"c\"], l2=[\"x\",\"y\",\"z\"]*\n",
+    "\n",
+    "*Output: [\"a\",\"b\",\"c\",\"x\",\"y\",\"z\"]*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0a7c45d-f208-41dc-9918-3eb88476fad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def concatenar_listas(l1, l2):\n",
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a2f3727-de2e-4577-8207-383ee11f5a3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
+    "assert concatenar_listas([\"a\",\"b\",\"c\"],[\"x\",\"y\",\"z\"]) == [\"a\",\"b\",\"c\",\"x\",\"y\",\"z\"], \"Error en el test 1\"\n",
+    "assert concatenar_listas([0,0,0,0],[1,1,1,1]) == [0,0,0,0,1,1,1,1], \"Error en el test 2\"\n",
+    "assert concatenar_listas([],[]) == [], \"Error en el test 3\"\n",
+    "assert concatenar_listas([1,2,3],[3,2,1]) == [1,2,3,3,2,1], \"Error en el test 4\"\n",
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8760b55a-e13b-434a-88d3-d66542b8227f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 35 {display-mode:\"form\"}\n",
+    "\n",
+    "def concatenar_listas(l1, l2):\n",
+    "    ret = l1.copy()\n",
+    "    ret.extend(l2)\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f74ae43-c492-4c10-a0a1-8505b93a2a9f",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 36:\n",
+    "\n",
+    "Crear una funcion esta_en_lista(lista, valor) que reciba dos parametros una lista y un entero y devuelva True si la lista contiene dicho valor o False en caso contrario\n",
+    "\n",
+    "\n",
+    "*Ejemplo de input y output:*\n",
+    "\n",
+    "*Input: lista=[\"a\",\"b\",\"c\"], valor=\"b\"*\n",
+    "\n",
+    "*Output: True*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1666143-b65b-4bee-b16b-6055414007d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def esta_en_lista(lista, valor):\n",
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ef900a9-0c0d-4498-a1cb-5f976991abfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
+    "assert esta_en_lista([\"a\",\"b\",\"c\"],\"b\") == True, \"Error en el test 1\"\n",
+    "assert esta_en_lista([\"a\",\"b\",\"c\"],\"d\") == False, \"Error en el test 2\"\n",
+    "assert esta_en_lista([],5) == False, \"Error en el test 3\"\n",
+    "assert esta_en_lista([1,2,3],3) == True, \"Error en el test 4\"\n",
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e95e4160-39a2-41cb-a7fb-cc3d40c722cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 36 {display-mode:\"form\"}\n",
+    "\n",
+    "# Solucion 1\n",
+    "def esta_en_lista(lista, valor):\n",
+    "    ret = valor in lista\n",
+    "    return ret\n",
+    "\n",
+    "# Solucion 2\n",
+    "def esta_en_lista(lista, valor):\n",
+    "    if valor in lista:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "# Solucion 3\n",
+    "def esta_en_lista(lista, valor):\n",
+    "    if valor in lista:\n",
+    "        return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "293ab5ce-9db5-4781-b97d-a7b6ad57937d",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 37:\n",
+    "\n",
+    "Crear una funcion copia(lista) que reciba un parametro de tipo list y que devuelva una lista nueva con los mismos elementos que la recibida. \n",
+    "\n",
+    "*Ejemplo de input y output:*\n",
+    "\n",
+    "*Input: lista=[4,3,1,2]*\n",
+    "\n",
+    "*Output: [4,3,1,2]*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ada98a63-74c0-4d38-9078-07dffe97375d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def copia(lista):\n",
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d875decd-94c4-4e7c-858f-ec16f82a5093",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los tests\n",
+    "lista1 = [4,3,1,2]\n",
+    "assert copia(lista1) == [4,3,1,2] and id(copia(lista1)) != id(lista1), \"Error en el test 1\"\n",
+    "lista2 = []\n",
+    "assert copia(lista2) == [] and copia(lista2) is not lista2, \"Error en el test 2\"\n",
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee86fb6b-f05f-492d-99d2-4595f917b817",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 37 {display-mode:\"form\"}\n",
+    "\n",
+    "def copia(lista):\n",
+    "    nueva_lista = lista.copy()\n",
+    "    return nueva_lista"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b1056747-ba8a-49e1-9def-1c7ed451a7b4",
    "metadata": {},
    "source": [
