--- a/cursos/espanol/programacion/A2_tuplas.ipynb
+++ b/cursos/espanol/programacion/A2_tuplas.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "1. Cuando queremos devolver mas de un elemento de una funcion.\n",
     "2. Cuando creamos una lista de elementos de distintos tipos, por ejemplo (\"Caramelos\",327,2.5)\n",
-    "3. Cuando queremos usar una lista como clave de un diccionario.\n",
+    "3. Cuando queremos usar una mas de un elemento como clave de un diccionario.\n",
     "\n",
     "Los casos 2 y 3 los veremos en las siguientes unidades del curso.\n",
     "\n",
@@ -245,7 +245,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Escribir aqui la solucion\n",
+    "def cuenta_y_suma(lista):\n",
+    "    # Escribir aqui la solucion\n",
     "\n"
    ]
   },
