--- a/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb
+++ b/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb
@@ -38,7 +38,7 @@
     }
    ],
    "source": [
-    "#@title {display-mode:\"form\"}\n",
+    "#@title ... {display-mode:\"form\"}\n",
     "# Codigo para generar el grafico. Veremos como funciona en el curso de Ciencia de Datos\n",
     "import matplotlib.pyplot as plt\n",
     "plt.pie([30, 10, 25, 35], labels=['amarillo', 'azul', 'rojo', 'verde'], colors=['khaki', 'royalblue', 'lightcoral', 'lightgreen'], autopct='%1.1f%%');"
@@ -188,7 +188,7 @@
    "outputs": [],
    "source": [
     "#@title Solucion Simulacion Problema de las tres puertas {display-mode:\"form\"}\n",
-    "\n",
+    "import random\n",
     "total_intentos = 10000 #total de intentos a simular\n",
     "gano_cambiando = 0\n",
     "gano_sin_cambiar = 0\n",
@@ -269,6 +269,7 @@
     "#@title Solucion Simulacion Estrategia Aleatoria {display-mode:\"form\"}\n",
     "\n",
     "#Estrategia aleatoria\n",
+    "import random\n",
     "numero_de_prisioneros = 100\n",
     "total_intentos = 10000 #total de intentos a simular\n",
     "veces_que_ganaron = 0\n",
@@ -313,6 +314,7 @@
     "#@title Solucion Simulacion Estrategia de seleccionar la caja con el ultimo numero que salio {display-mode:\"form\"}\n",
     "\n",
     "#Estrategia de seleccionar la caja con el ultimo numero que salio\n",
+    "import random\n",
     "numero_de_prisioneros = 100\n",
     "total_intentos = 10000 #total de intentos a simular\n",
     "veces_que_ganaron = 0\n",
@@ -338,7 +340,7 @@
     "        veces_que_ganaron += 1\n",
     "\n",
     "print(f\"Numero de veces que se salvan: {veces_que_ganaron}\")\n",
-    "print(f\"Probabilidad: {veces_que_ganaron/total_trials}\")"
+    "print(f\"Probabilidad: {veces_que_ganaron/total_intentos}\")"
    ]
   },
   {
