--- a/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb
+++ b/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb
@@ -344,12 +344,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4244c90b-91ac-4e68-9991-bcd573f9686e",
+   "cell_type": "markdown",
+   "id": "d3acaea5-7ee3-4764-b383-4ad0f351cb8d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html)"
+   ]
   }
  ],
  "metadata": {
