--- a/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb
+++ b/cursos/espanol/programacion/A6.1_probabilidades_contraintuitivas.ipynb
@@ -38,7 +38,7 @@
     }
    ],
    "source": [
-    "#@title ... {display-mode:\"form\"}\n",
+    "#@title {display-mode:\"form\"}\n",
     "# Codigo para generar el grafico. Veremos como funciona en el curso de Ciencia de Datos\n",
     "import matplotlib.pyplot as plt\n",
     "plt.pie([30, 10, 25, 35], labels=['amarillo', 'azul', 'rojo', 'verde'], colors=['khaki', 'royalblue', 'lightcoral', 'lightgreen'], autopct='%1.1f%%');"
@@ -51,7 +51,7 @@
    "source": [
     "*Bob dice:* \"Voy a sacar una cantidad igual de piezas de cada color. Luego voy a calcular nuevamente el porcentaje de cada color.\"\n",
     "\n",
-    "*Alicia dice:* \"No importa el nuemor de piezas que saques, la cantidad de piezas rojas siempre va a ser 25% del total.\"\n",
+    "*Alicia dice:* \"No importa el numero de piezas que saques, la cantidad de piezas rojas siempre va a ser 25% del total.\"\n",
     "\n",
     "**Comprobar si esto es cierto o no.**"
    ]
